# SlowingDown

./: .gitignore  README.md
data/: h-1.xml  h-1_elastic.xml
examples/: input.xml
examples/results/: absorption.out  energy.out  flux.out  input.xml  outscatterc.out  p1_scattering.out  r2c.out  scattering.out  wc.out  withinscatterc.out
src/: CMakeLists.txt  build.sh  constants.F90  cross_section.F90  cross_section_header.F90  error.F90  finalize.F90  global.F90  initialize.F90  input_xml.F90  main.F90  math.F90  nuclide_class.F90  output.F90  particle_class.F90  physics.F90  random.F90  tally_class.F90  tracking.F90  xml_interface.F90
utils/: calculate_diffusion.py  convert_xs.py
